# Code-Asterism

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt
repomap/: __init__.py  _version.py  analytics.py  args.py  args_formatter.py  commands.py  copypaste.py  deprecated.py  editor.py  exceptions.py  gui.py  help.py  history.py  io.py  linter.py  llm.py  main.py  mdstream.py  models.py  onboarding.py  prompts.py  reasoning_tags.py  repo.py  repomap.py  report.py  scrape.py  sendchat.py  utils.py  versioncheck.py  voice.py  waiting.py  watch.py
repomap/coders/: __init__.py  ask_prompts.py  base_coder.py  search_replace.py
repomap/tests/basic/: test_analytics.py  test_aws_credentials.py  test_coder.py  test_commands.py  test_deprecated.py  test_editblock.py  test_editor.py  test_exceptions.py  test_find_or_blocks.py  test_history.py  test_io.py  test_linter.py  test_main.py  test_model_info_manager.py  test_models.py  test_onboarding.py  test_openrouter.py  test_reasoning.py  test_repo.py  test_repomap.py  test_run_cmd.py  test_sanity_check_repo.py  test_scripting.py  test_sendchat.py  test_special.py  test_ssl_verification.py  test_udiff.py  test_urls.py  test_utils.py  test_voice.py  test_watch.py  test_wholefile.py
repomap/tests/browser/: test_browser.py
repomap/tests/fixtures/: chat-history-search-replace-gold.txt  chat-history.md
repomap/tests/help/: test_help.py
repomap/tests/scrape/: test_playwright_disable.py  test_scrape.py
